migration from web2py to django

--- a/templates/makeasy/index.html
+++ b/templates/makeasy/index.html
@@ -1,12 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 <title>Prova</title>
 </head>
-<body>
 
-<h1>Buongiorno</h1>
-<p>funziona</p>
+<body>
+<div style="height: 100%;
+    width: 50%;
+    background-color: powderblue;"></div>
 
 </body>
 </html>
