--- a/templates/makeasy/item.html
+++ b/templates/makeasy/item.html
@@ -53,13 +53,20 @@
         <div class='param'
              style="display:block;
                     z-index:3;
-                    overflow-y:hidden;
+                    position:absolute;
                     overflow-x:hidden;
-                    direction:ltr;">
+                    overflow-y:hidden;
+                    height:97%;
+                    width:400px;">
 
-            <h2 id="title" style="margin-left: 10px;"> </h2>
+            <h2 id="title" style="margin-left:10px; width: 100%;"> </h2>
+            <div class='vertical_scrollbar_left' style="width:100%;">
             <form action="#" enctype="multipart/form-data" id="data_form" method="post">
-                <table id="projects" class='makEasy' width="100%">
+                <table id="projects"
+                       class='makEasy'
+                       style="direction:ltr;
+                              width:100%;
+                              left:10px;">
                     <colgroup>
                         <col width="50%">
                         <col width="5%">
@@ -70,6 +77,7 @@
                     </tbody>
                 </table>
             </form>
+            </div>
         </div>
         <div id="3Dscene" style="float:left;width:100%;height:90vh;z-index: 1;"></div>
     </div>
@@ -86,7 +94,7 @@
 
 
     <script>
-        $(".param").wrap( "<div class='vertical_scrollbar_left'></div>" );
+        // $(".param").wrap( "<div class='vertical_scrollbar_left'></div>" );
         $.serializeJSON.defaultOptions.parseAll = true;
     </script>
 
