--- a/templates/makeasy/index.html
+++ b/templates/makeasy/index.html
@@ -9,6 +9,7 @@
 <div style="height: 100%;
     width: 50%;
     background-color: powderblue;"></div>
+<iframe src="https://www.esa.int/spaceinvideos/content/view/embedjw/500587" width="640" height="360" frameborder="0"></iframe>
 
 </body>
 </html>
